# potareporter

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml
src/: NewSpotEventSource.py  ScraperComponent.py  ServerComponent.py  Spot.py  potareporter.py
