[project]
name = "potareporter"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrew Beard",email = "bearda@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio (>=4.9.0,<5.0.0)",
    "asphalt (>=4.12.0,<5.0.0)",
    "requests (>=2.32.4,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
