[project]
name = "potareporter"
version = "0.1.1"
description = ""
authors = [{ name = "Andrew Beard", email = "bearda@gmail.com" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "anyio (>=4.9.0,<5.0.0)",
    "asphalt (>=4.12.0,<5.0.0)",
    "requests (>=2.32.4,<3.0.0)",
]

[project.optional-dependencies]
uvloop = [
    "uvloop>=0.21.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]
test = [
    "pytest>=8.4.1",
]
